--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -161,7 +161,7 @@
     <div class="numTip" style="margin-left:88px;height:20px;line-height: 20px;color:#ff7d31;" id="phoneNumTip4"></div>
   </div>
   <div class="quick-text1" style="margin: 0px 0 0px 60px;*margin-left: 20px;float: left">
-    <label class="title" for="quickPhone" style="font-size: 14px;font-weight: 500;line-height: 30px;margin-right: 10px;" >合作邮箱 : <span style="color: #666;margin-left: 10px;margin-top: -1px">gxp@jjl.cn</span></label>
+    <label class="title" for="quickPhone" style="font-size: 14px;font-weight: 500;line-height: 30px;margin-right: 10px;" >合作邮箱 : <span style="color: #666;margin-left: 10px;margin-top: -1px">gongxiaoping1575@jjl.cn</span></label>
   </div>
   <div class="dui-layout-lg" style="float: left">
     <div class="quick-text1" style="margin: 0px 0 0px 20px;*margin-left: 20px;float: left">
