--- a/public/assets/css/release_article.css
+++ b/public/assets/css/release_article.css
@@ -119,6 +119,7 @@
   resize: none;
   padding: 0;
   box-sizing: border-box;
+  border-color:#dcdcdc;
 }
 
 .word-num{
@@ -142,7 +143,7 @@
   width:12px;
   height:12px;
   border-radius: 50%;
-  border: 1px solid #333;
+  border: 1px solid #666;
   vertical-align: text-top;
   margin-right: 5px;
 }
@@ -161,7 +162,7 @@
   width:12px;
   height:12px;
   border-radius: 2.5px;
-  border: 1px solid #333;
+  border: 1px solid #666;
   vertical-align: text-top;
   margin-right: 5px;
 }
