--- a/views/login/login.html
+++ b/views/login/login.html
@@ -42,7 +42,11 @@
   </div>
 
   <div class="login_overseas clearfix">
-    <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;min-width: 1920px;"/>
+    
+    <div style="margin: 0px auto;height: 550px;min-width: 1180px;">
+      <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;"/>
+    </div>
+    
     <div class="login_content">
       <div class="login_nei text-center loginscreen  animated fadeInDown" style="text-align: left">
         <!-- <h3 class="login_nei_title">登录金吉列<a target="_blank"  href="{{helper.urlgen('register')}}">注册一个新账号</a></h3> -->
