--- a/public/assets/css/widget/nav_login.css
+++ b/public/assets/css/widget/nav_login.css
@@ -48,9 +48,7 @@
   position: relative;
 }
 .login_nei *{
-  -webkit-box-sizing:
-  border-box;-moz-box-sizing:
-  border-box;box-sizing:border-box
+  -webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box
 }
 .login_nei{
   width: 286px;
