--- a/views/index.html
+++ b/views/index.html
@@ -85,7 +85,7 @@
     <div class="xuanze-haiwai-bikuang"></div>
     <div class="xuanze-haiwai">
       <h2><i class="iconfont icon-top" style="margin: 26px 6px 0px 14px;color: #C13232;">&#xe6bd;</i>海外分公司:
-        <a target="_blank" class="dui-text-warning-s"  href="http://www2.jjlvip.cn/specialrank/zt/overseas/vancouver/index.html">温哥华</a></h2>
+        <a target="_blank" class="dui-text-warning-s"  href="http://www.jjl.cn/specialrank/zt/overseas/vancouver/index.html">温哥华</a></h2>
     </div>
   </div>
 
@@ -377,7 +377,7 @@
       if (currentarea) {
         e.preventDefault();
       }
-      $.cookie('currentarea', currentarea, { path: "/",domain: '.jjlvip.cn'});
+      $.cookie('currentarea', currentarea, { path: "/",domain: '.jjl.cn'});
       window.location.href = $(this).attr("href");
 
     });
@@ -385,7 +385,7 @@
     $('#selByIp').on('click',function (e) {
       e.preventDefault();
       var currentarea = $(this).attr("data-id");
-      $.cookie('currentarea', currentarea, { path: "/",domain: '.jjlvip.cn'});
+      $.cookie('currentarea', currentarea, { path: "/",domain: '.jjl.cn'});
       window.location.reload();
     })
       //
