关于我们换图片

--- a/views/widget/academy/academy3_2.html
+++ b/views/widget/academy/academy3_2.html
@@ -9,18 +9,30 @@
   </div>
   <div class="dui-layout-col3">
     <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/honor3.jpg" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a class="dui-text-warning-s" href="javascript:void(0);">北京留学服务行业协会常务理事单位</a></p>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a class="dui-text-warning-s" href="javascript:void(0);">“守合同重信用”企业公示资格</a></p>
   </div>
   <div class="dui-layout-col3">
     <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1"  style="height: 276px;width: 366px;" src="{{helper.cdnhost}}/assets/img/honor4.jpg" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">消费者满意单位</a></p>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">重合同守信誉单位</a></p>
   </div>
   <div class="dui-layout-col3">
     <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/honor5.jpg" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">消费教育学校</a></p>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">北京留学服务行业协会常务理事单位</a></p>
   </div>
   <div class="dui-layout-col3">
     <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/honor6.jpg" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">重合同守信誉单位</a></p>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">消费教育学校</a></p>
+  </div>
+  <div class="dui-layout-col3">
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/honor7.jpg" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">消费者满意单位</a></p>
+  </div>
+  <div class="dui-layout-col3">
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/honor8.jpg" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">非公经济发展服务基地</a></p>
+  </div>
+  <div class="dui-layout-col3">
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/honor9.jpg" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">2017年度公信力海外投资服务机构</a></p>
   </div>
 </div>
