修改 参赞标题

--- a/views/about/canzan.html
+++ b/views/about/canzan.html
@@ -38,9 +38,8 @@
 {{ new_nav_red.new_nav_red(tdk,helper) }}
 
 <div class="dui-layout-lg clearfix">
-  <p style="font-size: 14px;margin-left: 20px;margin-top: 20px;"><i class="iconfont" style="color: #C13232">&#xe60d;</i>>><span style="color: #C13232">留学消费教育特约专家</span></p>
+  <p style="font-size: 14px;margin-left: 20px;margin-top: 20px;"><i class="iconfont" style="color: #C13232">&#xe60d;</i>>><span style="color: #C13232">金吉列出国留学消费教育学校指导专家</span></p>
 </div>
-
 <div class="dui-layout-lg clearfix ">
   {% for item in canzanlist.list %}
    <div class="canzan dui-layout-col4 dui-box-shadow">
