修改删除案例

--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -181,7 +181,7 @@ input[type="checkbox"] {
       <input type="button" class="btn l_u_com_but" style="width: 330px;padding-left: 0;padding-right: 0" id="loginuser" value="登 录"/>
     </div>
     <div class=" clearfix" id="guwen" style="margin-top: 20px;">
-        <input class="wrap-con" type="checkbox" name="payMethod" value="1" id="xieyi"/><label for="xieyi"></label> 
+        <input class="wrap-con" type="checkbox" name="payMethod" value="1" id="xieyi" checked="checked"/><label for="xieyi"></label> 
         <div class="yonghu">我已阅读并同意<a target="_blank"  href="{{helper.urlgen('agreement', '')}}">金吉列用户使用协议</a></div>
     </div>
     <div class="l_u_com_she">
@@ -221,7 +221,7 @@ input[type="checkbox"] {
       <input type="button" class="btn l_u_com_but" style="width: 330px;padding-left: 0;padding-right: 0" id="loginuser_reg" value="注 册"/>
     </div>
     <div class=" clearfix" id="guwen_reg" style="margin-top: 20px;">
-        <input class="wrap-con" type="checkbox" name="payMethod" value="1" id="xieyi_reg"/><label for="xieyi_reg"></label> 
+        <input class="wrap-con" type="checkbox" name="payMethod" value="1" id="xieyi_reg" checked="checked"/><label for="xieyi_reg"></label> 
         <div class="yonghu">我已阅读并同意<a target="_blank"  href="{{helper.urlgen('agreement', '')}}">金吉列用户使用协议</a></div>
     </div>
     <div class="l_u_com_she">
