--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -499,7 +499,7 @@ if ($('#verify').val() === '') {
   layer.msg('请输入手机验证码');
   return
 }
-if (!$("input[type='checkbox']").is(':checked')) {
+if (!$("#guwen input[type='checkbox']").is(':checked')) {
       layer.msg('请同意注册协议');
       return
     }
