修改顾问背景图片

--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -53,7 +53,7 @@
         </div>
         <div class="adviser-top clearfix" style="margin-top: 20px;">
             <div style="float:left;line-height: 50px;" >
-              <div class="adviser-touxiang" style="background:url({{helper.avaterimg(userinfo.uid,'small',userinfo.status,userinfo.version)}}) no-repeat center;background-size:50px 50px;">
+              <div class="adviser-touxiang" style="background:url({{helper.avaterimg(userinfo.uid,'small',userinfo.status,userinfo.version)}}) no-repeat center;background-size:cover;">
               </div>
               <span style="font-size: 14px;color:#333;">
                 {{userinfo.realname}}<i class="adviser-v-i"></i>
