--- a/views/about/about.html
+++ b/views/about/about.html
@@ -31,10 +31,10 @@
     <p>金吉列出国留学咨询服务有限公司（简称金吉列留学），成立于1999年，2000年1月由教育部、公安部、国家工商行政管理总局资质认证的出国留学专业服务机构。公司现员工总数2600余人，业务涉及出国留学、海外移民、签证申请服务等领域，在海内外设有54家直营分、子公司。金吉列企业集团是国家工商总局公示认定的“重信用守合同”企业。金吉列留学商标是北京市工商局连续多年认定的“北京市著名商标”。...<a style="color: #C13232" href="{{ helper.urlgen('about/cultures') }}">【查看详情】</a></p>
   </div>
   <div class="profile-img clearfix">
-    <img src="{{helper.cdnhost}}/assets/img/profile1.jpg" alt="">
-    <img src="{{helper.cdnhost}}/assets/img/profile2.jpg" alt="">
-    <img src="{{helper.cdnhost}}/assets/img/profile3.jpg" alt="">
-    <img src="{{helper.cdnhost}}/assets/img/profile4.jpg" alt="">
+    <img src="{{helper.cdnhost}}/assets/img/profile1.jpg?v=2018030601" alt="">
+    <img src="{{helper.cdnhost}}/assets/img/profile2.jpg?v=2018030601" alt="">
+    <img src="{{helper.cdnhost}}/assets/img/profile3.jpg?v=2018030601" alt="">
+    <img src="{{helper.cdnhost}}/assets/img/profile4.jpg?v=2018030601" alt="">
   </div>
 </div>
 <div class="dui-layout-lg  dui-box-shadow boss-info" style="background: #ffffff">
@@ -45,7 +45,7 @@
   </div>
   <dl class="clearfix">
     <dt>
-      <img src="{{helper.cdnhost}}/assets/img/boss.jpg" alt="">
+      <img src="{{helper.cdnhost}}/assets/img/boss.jpg?v=2018030601" alt="">
     </dt>
     <dd>
       <p style="margin-top:12px;">张世杰博士，金吉列企业集团董事长，现任北京侨商会常务副会长、北京市企业发展促进会副会长、北京市私营个体经济协会副会长、全国教育服务标准化技术委员会委员、北京市工商联企业家高尔夫球会副会长；曾任全国青联委员、北京市人大代表、政协北京市第十二届委员会委员、朝阳区政协常委、北京市工商联常委、北京市工商业联合会（商会）副会长、北京市青年企业家协会理事、北京海外联谊会理事、北京国际友好联络会常务理事、北京市人民对外友好协会理事等社会职务。曾先后荣获中国优秀民营企业家、全国用户满意杰出管理者、北京市优秀青年企业家银奖、首都五一劳动奖章、五四青年奖章、首都精神文明建设奖、中国教育机构影响力品牌领袖、60年60人中国教育成就奖、教育产业十大领军人物、改革开放30年中国10大民营教育家、光彩事业带头人、中国爱迪生杯优秀发明奖、中国最具社会责任感企业家、北京奥运会、残奥会个人贡献奖（金质奖章）等多项荣誉。因在国际教育交流方面的杰出贡献，2009年10月，张世杰先生被澳大利亚纽卡斯尔大学授予荣誉博士学位。</p>
