--- a/views/user_information.html
+++ b/views/user_information.html
@@ -116,8 +116,8 @@
 
         <div class=" clearfix" id="xingbie" data-sex="{{userinfo.sex}}">
           <div class="title" style="margin-top: -5px;color: #333"> 性 别：&nbsp;&nbsp;</div>
-          <input class="wrap-con" type="radio" name="fm" value="1" checked/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;男
-          <input class="wrap-ing" type="radio" name="fm" value="2" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;女
+          <input class="wrap-con" type="radio" name="payMethod" value="1" checked/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;男
+          <input class="wrap-ing" type="radio" name="payMethod" value="2" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;女
         </div>
 
         <div class="form-group rel-case-text1 clearfix" style="margin-top: 20px;">
