企业荣誉增加新图片

--- a/views/widget/academy/academy3_2.html
+++ b/views/widget/academy/academy3_2.html
@@ -33,6 +33,18 @@
   </div>
   <div class="dui-layout-col3">
     <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/newhonor9.jpg?v=2018030701" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">文明单位</a></p>
+  </div>
+  <div class="dui-layout-col3">
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/newhonor10.jpg?v=2018030701" alt=""></a></div>
     <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">2017年度公信力海外投资服务机构</a></p>
+  </div>
+  <div class="dui-layout-col3">
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/newhonor11.jpg?v=2018030701" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">2017澳洲投资移民卓越服务机构</a></p>
+  </div>
+  <div class="dui-layout-col3">
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/newhonor12.jpg?v=2018030701" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">新浪2014加拿大金牌服务移民机构</a></p>
   </div>
 </div>
