--- a/views/widget2/follow/follow.css
+++ b/views/widget2/follow/follow.css
@@ -21,7 +21,7 @@
   -moz-border-radius: 50%;
   border-radius: 50%;
   background-repeat: no-repeat;
-  background-position: center 0;
+  background-position: 0 0;
   -webkit-background-size: cover;
   background-size: cover;
 }
