--- a/views/widget2/follow/follow.html
+++ b/views/widget2/follow/follow.html
@@ -2,7 +2,7 @@
 {% macro follow(f_type,fItem,helper) %}
 <div class="follow-con clearfix">
 <!--  <a target="_blank" href="{{helper.urlgen(fItem.friend_uid.toString())}}"><img class="img-left" src="{{helper.avaterimg(fItem.friend_uid, 'small',fItem.user_info.status,fItem.user_info.version)}}" alt=""/></a>-->
-  <a target="_blank" href="{{helper.urlgen(fItem.friend_uid.toString())}}" style="background: url({{helper.avaterimg(fItem.friend_uid, 'small',fItem.user_info.status,fItem.user_info.version)}})" class="img-left"></a>
+  <a target="_blank" href="{{helper.urlgen(fItem.friend_uid.toString())}}" style="background-image: url({{helper.avaterimg(fItem.friend_uid, 'small',fItem.user_info.status,fItem.user_info.version)}})" class="img-left"></a>
   <div class="content">
     <div class="content-title">{{fItem.user_info.realname}}</div>
     <div class="content-des">个人简介：{{fItem.user_info.introduce}}</div>
@@ -54,7 +54,7 @@
 {% macro follow_no(f_type,fItem,helper) %}
 <div class="follow-con clearfix">
 <!--  <img class="img-left" src="{{helper.avaterimg(fItem.fans_uid, 'small',fItem.user_info.status,fItem.user_info.version)}}" alt=""/>-->
-  <div style="background: url({{helper.avaterimg(fItem.fans_uid, 'small',fItem.user_info.status,fItem.user_info.version)}})" class="img-left"></div>
+  <div style="background-image: url({{helper.avaterimg(fItem.fans_uid, 'small',fItem.user_info.status,fItem.user_info.version)}})" class="img-left"></div>
   <div class="content">
     <div class="content-title">{{fItem.user_info.realname}}</div>
     <div class="content-des">个人简介：{{fItem.user_info.introduce}}</div>
