修改 商务合作  改留学移民业务合作

--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -168,7 +168,7 @@
     <div class="quick-text1" style="margin: 0px 0 0px 20px;*margin-left: 20px;float: left">
       <div id="wrap">
         <span style="font-size: 14px">合作方式</span>
-      <input class="wrap-con" type="radio" name="payMethod" value="1" checked/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;留学业务合作
+      <input class="wrap-con" type="radio" name="payMethod" value="1" checked/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;留学、移民业务合作
       <input class="wrap-ing" type="radio" name="payMethod" value="2" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;商务合作
     </div>
     </div>
