企业荣誉-首都文明单位

--- a/views/widget/academy/academy3_2.html
+++ b/views/widget/academy/academy3_2.html
@@ -32,8 +32,8 @@
     <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">非公经济发展服务基地</a></p>
   </div>
   <div class="dui-layout-col3">
-    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/newhonor9.jpg?v=2018030701" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">文明单位</a></p>
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/newhonor9_2.jpg?v=2018030801" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">首都文明单位</a></p>
   </div>
   <div class="dui-layout-col3">
     <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/newhonor10.jpg?v=2018030701" alt=""></a></div>
