--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -236,7 +236,7 @@
         }else {
             aItemHtml += '<a target="_blank" href="'+fn.urlgen("article", item.id.toString())+'" style="color: #C13232">'+item.title+'</a>'
         }
-            aItemHtml += '<span style="padding: 0 10px;height: 24px;margin-left: 20px;background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/yanse.png);background-size:cover ;border-radius:12px ;margin-top: -3px;text-align: center;line-height: 24px;color: #C13232;">'+item.tag_list+'</span>';
+            aItemHtml += '<span style="font-size: 12px;padding: 0 10px;height: 24px;margin-left: 20px;background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/yanse.png);background-size:cover ;border-radius:12px ;margin-top: -3px;text-align: center;line-height: 24px;color: #C13232;">'+item.tag_list+'</span>';
             aItemHtml += '</div>'+
                         '<div class="offer-opt-bar clearfix">'+
                         '<div class="opt-btn delete" onclick="deleteOffer($(this), '+item.uid+', '+item.id+')">'+
